# MicroShop-FastAPI

./: .gitignore  README.md  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_12_06_0244-8916850c15d6_create_products_table.py  2023_12_06_0259-9aab78c71393_create_users_table.py  2023_12_06_1859-4f5b097f9b40_create_posts_table.py  2023_12_06_1948-c145e4764361_create_profile_table.py  2023_12_07_1831-0c19b046311d_create_tables.py  2023_12_09_0310-c3411ee832ca_create_order.py  2023_12_09_1749-53261ad7e813_create_order_product_association_table.py  2023_12_10_2355-193e2b4ddb84_add_count_column_to_association_table.py  2023_12_11_2304-3e69701302e9_add_unit_price_column_in_.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
